tests/paczka1/fuzzy1/34475619.err
Error in line 2: 2ks S861 59,7
Error in line 6: 2ks A265 30,0
Error in line 21: Dpqv A304 75,65
Error in line 11: A304 A304 19,2
Error in line 26: 2ks A304 23,7
Error in line 30: A304 S435 71,7
Error in line 36: 24j A265 88,2
Error in line 37: 24j S861 43,1
